--- a/css/webflow.css
+++ b/css/webflow.css
@@ -507,7 +507,7 @@ textarea.w-select {
 .w-container {
   margin-left: auto;
   margin-right: auto;
-  max-width: width 940px;;
+  max-width: 940px;
 }
 .w-container:before,
 .w-container:after {
